# test-release-python

./: .gitignore  .release-config.json  README.md  pyproject.toml
src/test_release_python/: __init__.py
tests/: __init__.py  test_core.py
